--- a/services.html
+++ b/services.html
@@ -36,6 +36,14 @@
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
 </head>
+    <style>
+.bi{
+    margin-left:45%;
+  
+    
+    font-size:60px;
+}
+</style>
 
 <body>
     <header id="header" class="fixed-top d-flex align-items-center">
@@ -182,14 +190,19 @@
         <!-- ======= Services Section ======= -->
         <section id="services" class="services">
             <div class="container">
+                <div class="section-title pt-5" data-aos="fade-up">
+                    <h2>Our Services</h2>
+                </div>
+
                 <div class="row">
                     <div class="col-md-6">
                         <div class="icon-box" data-aos="fade-up">
-                            <div class="icon">
-                                <i class="bi bi-briefcase" style="color: #ff689b"></i>
-                            </div>
-                            <h4 class="title"><a href="">IP search and Protection </a></h4>
-                            <p class="description">
+
+                            <h2><i class="bi bi-briefcase " style="color: #ff689b"></i></h2>
+                            <h4 class="title text-center">
+                            
+                            <a href="">IP search and Protection </a></h4>
+                            <p class="description ">
                                 NIDA helps student and innovative university staff navigate
                                 easily through the IP protection process to get IP
                                 registration from Patent Design and Trademark registry from
@@ -199,10 +212,8 @@
                     </div>
                     <div class="col-md-6">
                         <div class="icon-box" data-aos="fade-up">
-                            <div class="icon">
-                                <i class="bi bi-book" style="color: #e9bf06"></i>
-                            </div>
-                            <h4 class="title">
+                                <h2><i class="bi bi-book" style="color: #e9bf06"></i></h2>
+                            <h4 class="title text-center">
                                 <a href="">Product design and development</a>
                             </h4>
                             <p class="description">
@@ -215,10 +226,8 @@
 
                     <div class="col-md-6" data-aos="fade-up" data-aos-delay="100">
                         <div class="icon-box">
-                            <div class="icon">
-                                <i class="bi bi-card-checklist" style="color: #3fcdc7"></i>
-                            </div>
-                            <h4 class="title"><a href="">Trainings</a></h4>
+                            <h2 ><i class="bi bi-card-checklist" style="color: #3fcdc7"></i></h2>
+                            <h4 class="title text-center" ><a href="">Teachings & Trainings</a></h4>
                             <p class="description">
                                 Teaching and training of potential inventors on product design
                                 and development, 21st century skills and commercialization
@@ -229,10 +238,8 @@
                     </div>
                     <div class="col-md-6" data-aos="fade-up" data-aos-delay="100">
                         <div class="icon-box">
-                            <div class="icon">
-                                <i class="bi bi-binoculars" style="color: #41cf2e"></i>
-                            </div>
-                            <h4 class="title"><a href="">Prototyping</a></h4>
+                            <h2>  <i class="bi bi-binoculars" style="color: #41cf2e"></i></h2>
+                            <h4 class="title text-center"><a href="">Prototyping services</a></h4>
                             <p class="description">
                                 A prototype is a virtual or real model of your invention,
                                 something that enables a user or developer to imagine or
@@ -245,10 +252,8 @@
 
                     <div class="col-md-6" data-aos="fade-up" data-aos-delay="200">
                         <div class="icon-box">
-                            <div class="icon">
-                                <i class="bi bi-globe" style="color: #d6ff22"></i>
-                            </div>
-                            <h4 class="title">
+                               <h2> <i class="bi bi-globe" style="color: #d6ff22"></i></h2>
+                            <h4 class="title text-center">
                                 <a href="">Creating awareness and discovering potential inventors</a>
                             </h4>
                             <p class="description">
@@ -262,10 +267,8 @@
                     </div>
                     <div class="col-md-6" data-aos="fade-up" data-aos-delay="200">
                         <div class="icon-box">
-                            <div class="icon">
-                                <i class="bi bi-clock" style="color: #4680ff"></i>
-                            </div>
-                            <h4 class="title"><a href="">Consultancy</a></h4>
+                                <h2><i class="bi bi-clock" style="color: #4680ff"></i></h2>
+                            <h4 class="title text-center"><a href="">Consultancy services</a></h4>
                             <p class="description">
                                 NIDA consultancy service will provide a professional and
                                 expert advice to student’s inventors, academic staffs and
@@ -279,7 +282,6 @@
             </div>
         </section>
         <!-- End Services Section -->
-
         <!-- ======= Features Section ======= -->
         <section id="features" class="features">
             <div class="container">
