--- a/index.html
+++ b/index.html
@@ -29,6 +29,14 @@
     <!-- Template Main CSS File -->
     <link href="assets/css/style.css" rel="stylesheet" />
 </head>
+    <style>
+.bi{
+    margin-left:45%;
+  
+    
+    font-size:60px;
+}
+</style>
 
 <body>
     <header id="header" class="fixed-top d-flex align-items-center">
@@ -290,7 +298,7 @@
         </section>
         <!-- End Cta Section -->
 
-        <!-- ======= Services Section ======= -->
+         <!-- ======= Services Section ======= -->
         <section id="services" class="services">
             <div class="container">
                 <div class="section-title pt-5" data-aos="fade-up">
@@ -300,11 +308,12 @@
                 <div class="row">
                     <div class="col-md-6">
                         <div class="icon-box" data-aos="fade-up">
-                            <div class="icon">
-                                <i class="bi bi-briefcase" style="color: #ff689b"></i>
-                            </div>
-                            <h4 class="title"><a href="">IP search and Protection </a></h4>
-                            <p class="description">
+
+                            <h2><i class="bi bi-briefcase " style="color: #ff689b"></i></h2>
+                            <h4 class="title text-center">
+                            
+                            <a href="">IP search and Protection </a></h4>
+                            <p class="description ">
                                 NIDA helps student and innovative university staff navigate
                                 easily through the IP protection process to get IP
                                 registration from Patent Design and Trademark registry from
@@ -314,10 +323,8 @@
                     </div>
                     <div class="col-md-6">
                         <div class="icon-box" data-aos="fade-up">
-                            <div class="icon">
-                                <i class="bi bi-book" style="color: #e9bf06"></i>
-                            </div>
-                            <h4 class="title">
+                                <h2><i class="bi bi-book" style="color: #e9bf06"></i></h2>
+                            <h4 class="title text-center">
                                 <a href="">Product design and development</a>
                             </h4>
                             <p class="description">
@@ -330,10 +337,8 @@
 
                     <div class="col-md-6" data-aos="fade-up" data-aos-delay="100">
                         <div class="icon-box">
-                            <div class="icon">
-                                <i class="bi bi-card-checklist" style="color: #3fcdc7"></i>
-                            </div>
-                            <h4 class="title"><a href="">Trainings</a></h4>
+                            <h2 ><i class="bi bi-card-checklist" style="color: #3fcdc7"></i></h2>
+                            <h4 class="title text-center" ><a href="">Teachings & Trainings</a></h4>
                             <p class="description">
                                 Teaching and training of potential inventors on product design
                                 and development, 21st century skills and commercialization
@@ -344,10 +349,8 @@
                     </div>
                     <div class="col-md-6" data-aos="fade-up" data-aos-delay="100">
                         <div class="icon-box">
-                            <div class="icon">
-                                <i class="bi bi-binoculars" style="color: #41cf2e"></i>
-                            </div>
-                            <h4 class="title"><a href="">Prototyping</a></h4>
+                            <h2>  <i class="bi bi-binoculars" style="color: #41cf2e"></i></h2>
+                            <h4 class="title text-center"><a href="">Prototyping services</a></h4>
                             <p class="description">
                                 A prototype is a virtual or real model of your invention,
                                 something that enables a user or developer to imagine or
@@ -360,10 +363,8 @@
 
                     <div class="col-md-6" data-aos="fade-up" data-aos-delay="200">
                         <div class="icon-box">
-                            <div class="icon">
-                                <i class="bi bi-globe" style="color: #d6ff22"></i>
-                            </div>
-                            <h4 class="title">
+                               <h2> <i class="bi bi-globe" style="color: #d6ff22"></i></h2>
+                            <h4 class="title text-center">
                                 <a href="">Creating awareness and discovering potential inventors</a>
                             </h4>
                             <p class="description">
@@ -377,10 +378,8 @@
                     </div>
                     <div class="col-md-6" data-aos="fade-up" data-aos-delay="200">
                         <div class="icon-box">
-                            <div class="icon">
-                                <i class="bi bi-clock" style="color: #4680ff"></i>
-                            </div>
-                            <h4 class="title"><a href="">Consultancy</a></h4>
+                                <h2><i class="bi bi-clock" style="color: #4680ff"></i></h2>
+                            <h4 class="title text-center"><a href="">Consultancy services</a></h4>
                             <p class="description">
                                 NIDA consultancy service will provide a professional and
                                 expert advice to student’s inventors, academic staffs and
