--- a/board-of-direct.html
+++ b/board-of-direct.html
@@ -189,7 +189,7 @@
                                 </div>
                             </div>
                             <div class="member-info text-center">
-                                <h4>Shirgba Joel Kaaka</h4>
+                                <h4>Shirgba Joel Karkaa</h4>
                                 <span> Founder / CEO </span>
 
                             </div>
