--- a/team.html
+++ b/team.html
@@ -200,7 +200,7 @@
                                 </div>
                             </div>
                             <div class="member-info text-center">
-                                <h4>Shirgba Joel Kaaka</h4>
+                                <h4>Shirgba Joel Karkaa</h4>
                                 <span>Chief Executive Officer</span>
 
                             </div>
