--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                     <div class="col-lg-6 pt-3 pt-lg-0 content">
                         <p
                             style="font-weight:bold;font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size:20px;">
-                            The Nigerian Inventors development Academy is an non-profit
+                            The Nigerian Inventors development Academy is a non-profit
                             organization that is positioned to corporate with other Nigerian
                             higher institutions, governmental and non-profit research
                             institutes, Hubs, individual inventor, and research fellows that
